# cds_crosswalkdetection

./: .gitignore  POETRY_SETUP.md  README.md  augment.py  best_optuna_params.json  copy_img.py  data_split.py  dataset.py  dataset_cleaner.py  error_analysis.csv  error_analysis.py  evaluate.py  hyperparameter_tuning.py  model.py  pyproject.toml  rebalance_dataset.py  review_queue.json  sort_images.py  train.py  training_history.json  verified_labels.json
eval/: misclassified_images.csv
eval/best_model/: evaluation_metrics.json
eval/best_model_v1_098.pth/: evaluation_metrics.json
eval/model_epoch3_acc95.41/: evaluation_metrics.json
tools/: augment.py  copy_img.py  data_split.py  dataset_cleaner.py  find_misclassified_images.py  rebalance_dataset.py  reclassify_images_ui.py  sort_images.py
