[project]
name = "deeplearning"
version = "0.1.0"
description = ""
authors = [
    {name = "Silvan Joos",email = "silvan.joos@stud.fhgr.ch"}
]
readme = "README.md"
requires-python = ">=3.12,<3.14.1 || >3.14.1,<3.15"
dependencies = [
    "opencv-python (>=4.13.0.92,<5.0.0.0)",
    "torch (>=2.12.0,<3.0.0)",
    "torchvision (>=0.27.0,<0.28.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
