[project]
name = "deeplearning"
version = "0.1.0"
description = ""
authors = [
    {name = "Silvan Joos",email = "silvan.joos@stud.fhgr.ch"}
]
readme = "README.md"
requires-python = ">=3.12,<3.14.1 || >3.14.1,<3.15"
dependencies = [
    "opencv-python (>=4.13.0.92,<5.0.0.0)",
    "torch (>=2.7.1,<3.0.0)",
    "torchvision (>=0.22.1,<0.23.0)",
    "torchaudio (>=2.7.1,<3.0.0)",
    "matplotlib (>=3.10.9,<4.0.0)",
    "scikit-learn (>=1.8.0,<2.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "optuna (>=4.8.0,<5.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "pytorch-gpu"
url = "https://download.pytorch.org/whl/cu118"
priority = "explicit"


[tool.poetry.dependencies]
torch = {source = "pytorch-gpu"}
torchvision = {source = "pytorch-gpu"}
torchaudio = {source = "pytorch-gpu"}
